test/error/1/Solution.java
public class Solution {

  // Errors because tests expect integer result
  public boolean main(int a) {
    return a > 1;
  }

}
